Add options w, m and y to print items for the coming week, month or year.

--- a/TODO
+++ b/TODO
@@ -1,1 +1,1 @@
-- Add options w, m and y to print items for the coming week, month or year.
++ Add options w, m and y to print items for the coming week, month or year.
