Sorting the report by date.

--- a/TODO
+++ b/TODO
@@ -5,4 +5,4 @@
         Pretend today is some other date.
 + Add date expressions like m=jan & w=sun.
 + Document all options
-- Sort resulting days
++ Sort resulting days
